# llm-watermark-robustness

./: CITATION.cff  DECISION_LOG.md  EXPERIMENTAL_DESIGN.md  FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  pyproject.toml  reproduce.sh
blog/: conference_abstract.md  discord_post.md  draft.md  linkedin_post.md  reddit_post.md  substack_intro.md
docs/: CONTENT_PLAN.md
outputs/experiments_v2/: all_experiments_summary.json  e0_results.json
scripts/: make_report_figures.py  run_experiments.py  run_experiments_v2.py
src/: kirchenbauer_watermark.py  watermark.py
tests/: test_measurements.py
