[build-system]
requires = ["setuptools>=65.0"]

[project]
name = "llm-watermark-robustness"
version = "0.1.0"
description = "FP-18: LLM Watermark Robustness Under Adversarial Paraphrasing"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "anthropic>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
